# Math-To-Manim

./: .env.example  .gitignore  AGENTS.md  AGENT_ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  EulerTest.md  GIF_WORKFLOW.md  MIGRATION_TO_CLAUDE.md  PROJECT_STRUCTURE.md  QUICK_VIDEO_REVIEW_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  Readme.md  SUMMARY.md  TESTING_ARCHITECTURE.md  TESTING_QUICKSTART.md  ULTRAQED.py  WEEK_1-2_COMPLETION_SUMMARY.md  app.py  check_env.py  debug_ffmpeg.py  deploy_to_gcloud.py  generate_manim_from_tree.py  mylist.txt  prerequisite_explorer.py  prerequisite_explorer_claude.py  pyproject.toml  pytest.ini  regenerate_test.py  reorganize.py  requirements.txt  run_pipeline_from_latex.py  run_tests.py  skilltest.md  smolagent_prototype.py  test_threejs_integral.py  zzzz.md
.claude/: settings.local.json
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: examples.instructions.md
.github/workflows/: ci.yml
.hermes/: erdos_unit_distance_prompt.md
.hermes/plans/: ErdosUnitDistanceProblem_prompt.txt  (+1 more)
.tmp-hf-about-me/: README.md
Gemini3/: Machinarium.py  Machinarium.txt  complex_prompt.txt  geodesic_prompt.txt  output_scene.py  regenerate_assets.py  reproduce_issue.py  run_pipeline.py
KimiK2.5Swarm/: README.md  SETUP.md  __init__.py  config.py  kimi_client.py
KimiK2Thinking/: README.md
RevisedBenamou-Brenier/: benamou_brenier_full.py
Scripts/: Verbose_QED.py  add_gif_previews.py  batch_test_and_render.py  fractal_scene.py  render_examples_as_gifs.py  render_gif.py  run_presentation.py  smolagent_expander.py  smolagent_prototype.py
docs/: AGENT_FAQ.md  AGENT_INSPECTION_GUIDE.md  AGENT_PIPELINE_GUIDE.md  ARCHITECTURE.md  ARTIFACT_SCHEMAS.md  CLAUDE.md  COMMUNICATION_STRATEGY.md  DEPLOYMENT_ROADMAP.md  DOMAIN_SKILLS.md  EVAL_STRATEGY.md  EXAMPLES.md  HERMES_LEARNS_MANIM.md  MIGRATION_NOTES.md  NOMIC_ATLAS_INTEGRATION.md  PRIME_INTELLECT_RL.md  PROJECT_STRUCTURE.md  QUICK_VIDEO_REVIEW_GUIDE.md  README.md  REFACTOR_SUMMARY.md  RENDERING_PROGRESS.md  REPOSITORY_ORGANIZATION.md  REVERSE_KNOWLEDGE_TREE.md  ROADMAP.md  TESTING_ARCHITECTURE.md  VERCEL_SKILLS_INTEGRATION.md  VIDEO_REVIEW_TOOLKIT.md  extracted_concept.md
environments/math_to_manim/: README.md  pyproject.toml
environments/math_to_manim/m2m2_visual_repair/configs/: repair_train.toml
evals/: prompt_suite.yaml
examples/: lorenz_attractor_3d.py
final_output/: file_list.txt
math_to_manim/: __init__.py  cli.py  config.py
mythos/: __init__.py  cinematography.py  harness.py
output/: Minkowski_Spacetime_animation.py  Minkowski_Spacetime_kimi_tree.json  Minkowski_Spacetime_narrative.txt  hopf_fibration_animation.py
prompts/: epic_improved_from_math_to_manim.md
public/: README.md
scripts/: check_env.py  demo_10_minute_pipeline.py  generate_manim_from_tree.py  regenerate_test.py  run_pipeline_from_latex.py
src/: __init__.py  app.py  app_claude.py
tests/: README.md  conftest.py  live_test_runner.py  test_agent_pipeline.py  test_basic_validation.py  test_kimi_k2_prerequisite_explorer.py  test_prerequisite_explorer.py  test_setup_validation.py  test_simple_validation.py  test_threejs_integral.py
tools/: agent_bridge.py  frame_viewer.py  video_review_toolkit.py
(+298 files in other folders)
