[tool.poetry]
name = "math-to-manim"
version = "0.1.0"
description = "Transform mathematical concepts into beautiful animations using AI-powered generation"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "Scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
manim = "^0.19.0"
numpy = "^2.1.0"
scipy = "^1.7.0"
matplotlib = "^3.4.0"
openai = "^1.3.0"
gradio = "^3.50.0"
python-dotenv = "^0.19.0"
transformers = "^4.34.0"
torch = "^2.0.0"
accelerate = "^0.24.0"
bitsandbytes = "^0.41.0"
ipython = "^8.0.0"
black = "^22.0.0"
pyyaml = "^6.0"
manimpango = "^0.4.0"
latex = "^0.7.0"
sentry-sdk = "^1.0.0"
smolagents = {git = "https://github.com/huggingface/smolagents.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
test = "pytest"
tests = "pytest"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=Scripts",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["Scripts"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"